--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -15,14 +15,26 @@
         </div>
     
         <div class="selections-page">
-            <div *ngIf="userSignedIn">
-                Welcome dear user {{userSignedIn}}
-            </div>
+
+            <div *ngIf="!userNameSignedIn; then thenBlock else elseBlock"></div>
+            
+            <ng-template #thenBlock>
+                <div>Welcome to the Argicultular Management System.<br> <br>First, please sign in or sign up</div>
+            </ng-template>
+
+            <ng-template #elseBlock>
+                <div [ngClass]="currentClasses">
+                    🌾 Welcome back, {{userNameSignedIn}}!
+                <br>
+                    {{welcomeMessage}}
+                </div>
+            </ng-template>
+
+            <!-- <ng-template select let-data [selectFrom]="fruit">
+                <p>The fruit is: {{ data }}</p>
+            </ng-template> -->
         </div>
 
-        
     </div>
 
 </div>
-
-
