--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+app-profit-estimate {
+    flex-grow: 1;
+    width: 100%;
+  }
