added ngSwitch to render component dynamically

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -8,9 +8,8 @@
             <ul class="app-left-options-list">
                 <li appOptionHoverHighlight routerLink="">Dashboard</li>
                 <li appOptionHoverHighlight>Χτήματα</li>
-                <li appOptionHoverHighlight>Δουλειές</li>
+                <li appOptionHoverHighlight routerLink="jobs">Δουλειές</li>
                 <li appOptionHoverHighlight routerLink="profitEstimate">Εκτίμηση Κέρδους</li>
-                <li appOptionHoverHighlight>sjinb</li>
             </ul>
         </div>
     
