--- a/src/app/components/jobs/irrigation/irrigation.component.html
+++ b/src/app/components/jobs/irrigation/irrigation.component.html
@@ -1,1 +1,36 @@
-<p>irrigation works!</p>
+<div class="irrigation-container">
+
+    <div class="image"></div>
+    <div>🔁 Συχνότητα:<br>
+    
+        Πρώιμα ποτίσματα: κάθε 10–15 ημέρες την άνοιξη (ανάλογα με τις βροχοπτώσεις). <br>
+        
+        Θερινά ποτίσματα: κάθε 7–10 ημέρες, ειδικά σε ξηρά καλοκαίρια.<br>
+        
+        📅 Κρίσιμες περίοδοι για πότισμα:<br>
+        
+        Πριν την άνθιση – για καλή ανάπτυξη βλαστών.<br>
+        
+        Κατά την καρπόδεση – για σταθεροποίηση των ραγών.<br>
+        
+        Κατά την αύξηση των ραγών – για σωστό μέγεθος και χυμό.<br>
+        
+        Περιορισμένο πότισμα πριν την ωρίμανση – για ενίσχυση της ποιότητας και αποφυγή αραιής γεύσης.<br>
+        
+        🌡️ Συνθήκες εδάφους:<br>
+        
+        Τα εδάφη της Κορινθίας είναι συνήθως καλά στραγγιζόμενα.<br>
+        
+        Ιδανική χρήση στάγδην άρδευσης για έλεγχο ποσότητας και αποφυγή ασθενειών.<br>
+        
+        ⚠️ Αποφυγή υπερβολικού ποτίσματος:<br>
+        
+        Μπορεί να προκαλέσει σκάσιμο ραγών ή μειωμένη συγκέντρωση σακχάρων.<br>
+        
+        Αυξάνει τον κίνδυνο μυκητολογικών ασθενειών (π.χ. βοτρύτης).<br>
+        
+        🕒 Ώρα ποτίσματος:<br>
+        
+        Κατά προτίμηση νωρίς το πρωί ή αργά το απόγευμα για να μειωθεί η εξάτμιση.</div>
+</div>
+
