--- a/src/app/components/jobs/pruning/pruning.component.html
+++ b/src/app/components/jobs/pruning/pruning.component.html
@@ -1,1 +1,41 @@
-<p>pruning works!</p>
+<div class="pruning-container">
+
+    <div class="image"></div>
+    <div>
+        📅 Πότε γίνεται: <br>
+Χειμερινό κλάδεμα (βασικό):<br>
+
+Ιανουάριο – Φεβρουάριο, όταν το φυτό είναι σε λήθαργο.<br>
+
+Καλοκαιρινό/πράσινο κλάδεμα (συμπληρωματικό):<br>
+
+Άνοιξη – Καλοκαίρι, για αφαίρεση βλαστών και φύλλων που σκιάζουν τις ράγες.<br>
+
+🛠️ Σκοποί κλαδέματος:<br>
+📏 Ρύθμιση της παραγωγής: διατήρηση σωστής ισορροπίας μεταξύ βλάστησης και καρποφορίας.<br>
+
+☀️ Καλύτερος φωτισμός & αερισμός: μειώνει ασθένειες και βοηθά στην ωρίμανση.<br>
+
+🍇 Ποιότητα σταφυλιών: βελτιώνει μέγεθος, χρώμα και γεύση των ραγών.<br>
+
+🌱 Αναζωογόνηση του φυτού: απομάκρυνση παλιών ή αδύναμων βλαστών.<br>
+
+✂️ Τεχνικές:<br>
+Κλάδεμα κεφαλής (head pruning) ή παραγωγικό κλάδεμα:<br>
+
+Διατηρείται ο σκελετός και κόβονται οι παλιοί καρποφόροι βλαστοί.<br>
+
+Αφαίρεση “μάτιών”:<br>
+
+Αφήνονται περίπου 2–4 μάτια ανά βλαστό, ανάλογα με την ηλικία και τη δύναμη του φυτού.<br>
+
+Αφαίρεση “λαίμαργων” (άχρηστοι βλαστοί που δεν θα καρποφορήσουν).<br>
+
+⚠️ Προσοχή:<br>
+Όχι υπερβολικό κλάδεμα, γιατί μπορεί να μειώσει σημαντικά την παραγωγή.<br>
+
+Καλό είναι να απολυμαίνονται τα εργαλεία για αποφυγή μετάδοσης ασθενειών.<br>
+
+Μην κλαδεύεις όταν υπάρχει παγετός ή υγρασία – αυξάνεται ο κίνδυνος τραυματισμών και προσβολών.<br>
+    </div>
+</div>
