--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 app-profit-estimate {
     flex-grow: 1;
-    width: 100%;
+    width: 100% !important;
 } 
 
 app-jobs{
