--- a/src/app/components/jobs/irrigation/irrigation.component.html
+++ b/src/app/components/jobs/irrigation/irrigation.component.html
@@ -1,4 +1,4 @@
-<div appFadeIn class="irrigation-container">
+<div [@fadeIn] class="irrigation-container">
 
     <div class="image"></div>
     <div>🔁 Συχνότητα:<br>
