--- a/src/app/components/profit-estimate/profit-estimate.component.html
+++ b/src/app/components/profit-estimate/profit-estimate.component.html
@@ -1,6 +1,6 @@
 <div class="profit-estimate-container">
 
-    <div class="choose-farm-container">
+    <div [@fadeIn] class="choose-farm-container">
         Διάλεξε το χτήμα:<br>
         <div class="filter-section">
                 <label class="custom-checkbox">
