--- a/src/app/components/welcome-messages/welcome-messages.component.html
+++ b/src/app/components/welcome-messages/welcome-messages.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="!userSignedIn; then thenBlock else elseBlock"></div>
             
             <ng-template #thenBlock>
-                <div appFadeIn >Welcome to the Argicultular Management System.<br> <br>First, please sign in or sign up</div>
+                <div [@fadeIn] appFadeIn >Welcome to the Argicultular Management System.<br> <br>First, please sign in or sign up</div>
             </ng-template>
 
             <ng-template #elseBlock>
-                <div appFadeIn [ngClass]="currentClasses">
+                <div [@fadeIn] [ngClass]="currentClasses">
                     🌾 Welcome back, {{userSignedIn}}!
                 <br>
                     {{welcomeMessage}}
