--- a/src/app/components/app/app.component.css
+++ b/src/app/components/app/app.component.css
@@ -2,8 +2,8 @@
     width: 100%;
     height: 10%;
     display: flex;
-    background-color: #2d702d;
-    box-shadow: 0 10px 6px -1px rgba(0, 0, 0, 0.1);
+    background: linear-gradient(to bottom, #192c19, #198619);
+    
     align-items: center;
 }
 
@@ -40,7 +40,7 @@
 }
 
 .app-left-options-list li{
-    margin: 3rem 1rem 3rem 1rem;
+    margin: 1rem 1rem 1rem 1rem;
     padding: 1rem;
     list-style: none;
 }
@@ -55,5 +55,9 @@
     border-left: 2px solid #cacaca;
     background-color: white;
     padding: 3rem;
+}
+
+.active{
+    color: #1aa7bc;
 }
 
