added examples for routing and permission page

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,3 +1,5 @@
+<div *ngIf="loading" class="loading-spinner">Loading...</div>
+
 <div style="background-color: #f5fff7;">
 
     <div [@fadeIn] class="app-top-bar-container">
