--- a/src/app/practice/practice.component.html
+++ b/src/app/practice/practice.component.html
@@ -35,3 +35,6 @@
 <!-- <div *ngFor="let property of farm | keyvalue">
     {{property.key}}:{{property.value}}
 </div> -->
+
+<button>practice-outlet</button>
+<router-outlet name="practice-outlet"></router-outlet>
