saving before implementing deactivate with bootstrap dialog

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -23,7 +23,7 @@
                     <li appOptionHoverHighlight style="font-weight: bold" routerLink="" >&lt; Κλείσιμο</li>
                     <li appOptionHoverHighlight routerLink="jobs/descriptions">Περιγραφή</li>
                     <li appOptionHoverHighlight  routerLink="**">Κατηγορίες</li>
-                    <li appOptionHoverHighlight  routerLink="**">Προσθήκη</li>
+                    <li appOptionHoverHighlight  routerLink="jobs/addJob">Προσθήκη</li>
                 </ul>
             </ng-container>
 
