added modal when not saved

--- a/src/app/components/jobs/add-job/add-job.component.html
+++ b/src/app/components/jobs/add-job/add-job.component.html
@@ -2,4 +2,4 @@
 
 <!-- <button (click)="addJob()">Add Job</button> -->
 
-<app-save-changes-modal></app-save-changes-modal>
+<app-save-changes-modal (decision)="onDecision($event)"></app-save-changes-modal>
