--- a/src/app/components/modals/save-changes-modal/save-changes-modal.component.html
+++ b/src/app/components/modals/save-changes-modal/save-changes-modal.component.html
@@ -1,21 +1,8 @@
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
+<div class="modal-backdrop" *ngIf="isVisible">
+  <div class="modal-content">
+    <h3>Unsaved Changes</h3>
+    <p>You have unsaved changes. Are you sure you want to leave?</p>
+    <button (click)="confirmLeave()">Yes</button>
+    <button (click)="cancelLeave()">No</button>
   </div>
+</div>
