--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -7,33 +7,7 @@
     </div>
     <div class="left-options-main-page-container">
         <div class="app-left-options-list-container">
-
-            <ng-container *ngIf="urlHasMain()">
-                <ul [@slideInRight] class="app-left-options-list">
-                    <li appOptionHoverHighlight routerLink="" >Dashboard</li>
-                    <li appOptionHoverHighlight routerLink="main/**" routerLinkActive="active">Χτήματα</li>
-                    <li appOptionHoverHighlight routerLink="jobs" >Δουλειές   &gt;</li>
-                    <li appOptionHoverHighlight routerLink="profitEstimate" aria-current="page">Εκτίμηση Κέρδους</li>
-                    <li appOptionHoverHighlight routerLink="main/practice" routerLinkActive="active">Εξάσκηση</li>
-                </ul>
-            </ng-container>
-
-            <ng-container *ngIf="urlHasJob()">
-                <ul [@slideInLeft] class="app-left-options-list">
-                    <li appOptionHoverHighlight style="font-weight: bold" routerLink="" >&lt; Κλείσιμο</li>
-                    <li appOptionHoverHighlight routerLink="jobs/descriptions">Περιγραφή</li>
-                    <li appOptionHoverHighlight  routerLink="**">Κατηγορίες</li>
-                    <li appOptionHoverHighlight  routerLink="jobs/addJob">Προσθήκη</li>
-                </ul>
-            </ng-container>
-
-            <ng-container *ngIf="urlHasProfitEstimate()">
-                <ul [@slideInLeft] class="app-left-options-list">
-                    <li appOptionHoverHighlight style="font-weight: bold" routerLink="">&lt; Κλείσιμο</li>
-                    <li appOptionHoverHighlight routerLink="profitEstimate/descriptions">Περιγραφή</li>
-                </ul>
-            </ng-container>
-            
+            <app-left-menu-options></app-left-menu-options>
         </div>
     
         <div class="selections-page">
