--- a/src/app/layout/left-menu-options/left-menu-options.component.html
+++ b/src/app/layout/left-menu-options/left-menu-options.component.html
@@ -4,7 +4,7 @@
         <li appOptionHoverHighlight routerLink="main/**" routerLinkActive="active">Χτήματα</li>
         <li appOptionHoverHighlight routerLink="jobs" >Δουλειές   &gt;</li>
         <li appOptionHoverHighlight routerLink="financial" aria-current="page">Οικονομικά</li>
-        <li appOptionHoverHighlight routerLink="main/practice" routerLinkActive="active">Εξάσκηση</li>
+        <li appOptionHoverHighlight routerLink="practice" routerLinkActive="active">Εξάσκηση</li>
     </ul>
 </ng-container>
 
